# speech_recognition_course

./: README.md
group_task_1/: Makefile  README.md  pyproject.toml  submission.py
group_task_1/configs/: config.yaml
group_task_1/src/dataset/: datamodule.py  preprocess.py  sample_aug.py
group_task_1/src/group_task_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
group_task_1/src/models/: base.py  baseline.py
group_task_1/src/train/: train.py
group_task_1/src/utils/: config.py  metrics.py  submission.py
hw_1/: README.md  REPORT.md
hw_1/src/: dataset.py  main.py  melbank.py  melbank_bench.py
