[project]
name = "group-task-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "pytorch-lightning>=2.2.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "soundfile>=0.12.1",
    "editdistance>=0.8.1",
    "aim>=3.29.1",
    "ffmpeg>=1.4",
    "audiomentations>=0.43.1",
    "pyroomacoustics>=0.10.0",
    "ty>=0.0.32",
    "ruff>=0.15.12",
    "click>=8.3.2",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
preview = true
extend-select = [
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT003",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TC",
    "PTH",
    "FLY",
    "I",
    "C90",
    "N",
    "PERF102",
    "PERF203",
    "PERF402",
    "E",
    "W",
    "F",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]
fixable = [
    "F401",
    "UP035",
    "I001",
    "E302",
    "E303",
    "Q000",
    "RUF022",
    "W292",
    "W293",
    "W391",
]
ignore = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "S311",     # Standard pseudo-random generators are not suitable for cryptographic purposes
    "COM812",   # trailing comma — not enforced everywhere
    "C420",     # Unnecessary dict comprehension; use dict.fromkeys
    "C416",     # Unnecessary comprehension
    "G004",     # Logging statement uses f-string
    "PIE808",   # Unnecessary start argument in range
    "PT011",    # pytest.raises too broad
    "PT012",    # pytest.raises block should contain single statement
    "RET504",   # Unnecessary assignment before return
    "RET505",   # Unnecessary branch after return
    "SIM103",   # Return condition directly
    "SIM108",   # Use ternary operator instead of if-else block
    "TC002",    # Move third-party import into type-checking block
    "TC001",    # Move own import into type-checking block
    "PLR2004",  # Magic value used in comparison
    "PLR6301",  # Method could be a function/classmethod/staticmethod
    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0916",
    "PLR0917",
    "PLR6104",  # Use augmented assignment operator
    "FURB118",  # Use operator.{op} instead of defining a lambda
    "FURB140",  # Use itertools.starmap instead of generator
    "TRY003",   # Avoid long messages outside the exception class
    "TC006",    # Add quotes to type expression in typing.cast()
    "TRY004",   # Prefer TypeError for invalid type
    "PGH003",   # Use specific rule codes when ignoring issues
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"src/dataset/preprocess.py" = ["T201", "BLE001"]
"src/utils/submission.py"   = ["T201"]
"src/train/train.py"        = ["T201"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "F",  # torch.nn.functional
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = ["test/**"]

[tool.ty.rules]
# torch.distributed stubs are incomplete; suppress spurious attribute errors
possibly-missing-attribute = "ignore"

